# aws_sample_python_app

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: cicd.yml
app/: __init__.py  main.py
infra/: app.py  aws_sample_python_app_stack.py  requirements.txt
infra/tests/: __init__.py  test_stack.py
tests/: test_main.py
