[project]
name = "aws-sample-python-app"
version = "0.1.0"
description = "Simplified cloud-based application deployment pipeline"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pytest>=8.3.3",
    "httpx>=0.27.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
